<resources>
    <string name="app_name">PhonePe Book</string>
    <string name="Rs">\u20B9</string>
    <string name="permission_required">Permission are requried access the app.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use now.</string>
    <string name="username_your_items_are_ready">Your Items are ready</string>
    <string name="min_stock">The Minimum Stock should be</string>
    <string name="empty_list">Empty</string>
    <string name="start_search">Start Search</string>
    <string name="md_expand_more">Expand</string>
    <string name="search">Search</string>
    <string name="done_search">Done</string>
    <string name="md_expand_less">Less</string>
    <string name="select_user_name">Select User</string>
    <string name="add_party">Add User</string>
    <string name="choice_image">Choice Image</string>
    <string name="generate_bill">Generate Bill</string>
    <string name="add_user_info">Add User Info</string>
    <string name="add_update_stock">Add / Update Stock</string>
    <string name="billing_history">Billing History</string>
    <string name="to">To:</string>
    <string name="choose_to_date">Choose To Date</string>
    <string name="from">From:</string>
    <string name="choose_from_date">Choose From Date</string>
    <string name="share">Share</string>
    <string name="no_data">No Data</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="add_manually">Add Manually</string>
    <string name="add_stocks">Add Stocks</string>
    <string name="add_through_scanner">Add through Scanner</string>
    <string name="vendor">Vendor</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_payment">Add Payment</string>
    <string name="paid_amount">Paid Amount:</string>
    <string name="due_amount">Due Amount:</string>
    <string name="due">Due:</string>
    <string name="paid">Paid:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="total">Total:</string>
    <string name="vendor_report">Vendor Report</string>
    <string name="single_report">Single Report</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search_entries">Search Entries</string>
    <string name="all">All</string>
    <string name="search_item">Search Item</string>
    <string name="select_report_duration">Select Report Duration</string>
    <string name="date_range">Date Range</string>
    <string name="last_month">Last Month</string>
    <string name="last_week">Last Week</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_month">This Month</string>
    <string name="show_details">Show Details</string>
</resources>