<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    tools:context=".Ui.Report.SingleReport.BottomSheets.FilterBottomSheet">

    <View
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:background="@drawable/bg_rounded_btn"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/select_report_duration"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <RadioGroup
        android:id="@+id/radio_grp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <RadioButton
            android:id="@+id/radio_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/colorPrimary"
            android:layoutDirection="rtl"
            android:text="@string/all" />

        <RadioButton
            android:id="@+id/radio_this_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/colorPrimary"
            android:layoutDirection="rtl"
            android:text="@string/this_month" />

        <RadioButton
            android:id="@+id/radio_single_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/colorPrimary"
            android:layoutDirection="rtl"
            android:text="@string/yesterday" />

        <RadioButton
            android:id="@+id/radio_last_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/colorPrimary"
            android:layoutDirection="rtl"
            android:text="@string/last_week" />

        <RadioButton
            android:id="@+id/radio_last_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/colorPrimary"
            android:layoutDirection="rtl"
            android:text="@string/last_month" />

        <RadioButton
            android:id="@+id/radio_date_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/colorPrimary"
            android:layoutDirection="rtl"
            android:text="@string/date_range" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>